--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "sentry"]
-	path = sentry
+[submodule "sentry-self-hosted"]
+	path = sentry-self-hosted
 	url = https://github.com/getsentry/self-hosted.git
